--- a/style.css
+++ b/style.css
@@ -1,148 +1,183 @@
+/*General*/
+
 * {
   margin: 0;
+  padding: 0;
 }
 
-body {
-  font-family: "Lucida Grande", sans-serif;
-  background: white;
-  font-size: 1em;
+html, body {
+  font-family: helvetica, sans-serif;
+  text-align: center;
 }
 
-.content {
-  grid-area: content;
+h2 {
+  font-size: 1.6em;
+  color: brown;
 }
 
-.navbar {
-  grid-area: navbar;
-  background-image: linear-gradient(to right, #C2EBEC, #4CEFEA, #21B8DC);
-}
+/*Navbar*/
 
-.footer {
-  grid-area: footer;
-  background: lightgray;
-}
-
-.container {
+#navbar {
+  position: fixed;
   width: 100%;
-  height: 100vh;
-  font-size: 1.5em;
-  display: grid;
-  grid-template-areas:
-    "navbar"
-    "content"
-    "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px auto 130px;
+  height: 80px;
+  background-image: linear-gradient(
+    90deg, #03eeff, #06dceb, #05c6d4);
 }
 
-.navbar .content .footer {
-  padding: 1em;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  vertical-align: middle;
-}
-
-nav li {
-  list-style: none;
-  padding: 1em 0;
-}
-
-nav li a {
-  color: black;
-  font-weight: 700;
-  opacity: 0.6;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-nav li a:hover {
-  opacity: 1;
-}
-
-.image {
-  max-width: 960px;
-  margin: 25px auto;
-  text-align: center;
-}
-
-.image img {
-  width: 200px;
-  border-radius: 50%;
-}
-
-.bio h1 {
-  font-size: 2em;
-  font-weight: 200;
-}
-
-.bio p {
-  font-weigth: 300;
-  line-height: 1.8em;
-  color: black;
-  margin: 10px 0 40px 0;
-}
-
-.btn {
-  display: in-line block;
-  text-decoration: none;
-  color: white;
-  font-weight: 700;
-  background: seagreen;
-  padding: 0.5em 2em;
-  border-radius: 40px;
-  margin: 1em 0;
-  transition: 0.3s;
-}
-
-.btn:hover {
-  box-shadow: 0 10px 50px black;
-}
-
-footer ul {
-  max-width: 640px;
-  margin: 2em auto;
-  padding: 0;
-  text-align: center;
+#navbar ul {
+  height: 100%;
   display: flex;
   flex-direction: row;
-}
-
-footer ul li {
+  justify-content: space-around;
+  align-items: center;
   list-style: none;
-  align-self: flex-end;
 }
 
-footer ul li a {
+.nav-links {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 1.2em;
+  transition: 0.6s;
+}
+
+.nav-links:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
+/*Main Content*/
+
+#welcome-section {
+  background-color: #dedad6;
+  height: 60vh;
+  padding-top: 40vh;
+  font-family: verdana, sans-serif;
+}
+
+#welcome-section h1 {
+  font-size: 48px;
+}
+
+#welcome-section p {
+  margin-top: 10px;
+  line-height: 30px;
+}
+
+#email {
+  text-decoration: none;
+  color: red;
+}
+
+#projects {
+  background-color: #c5ae97;
+  padding-top: 90px;
+  padding-bottom: 50px;
+}
+
+.project-tile {
+ width: 50vw;
+ height: 200px;
+ margin: 50px auto;
+ background-color: black;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+}
+
+.project-tile a {
+  margin: auto 0;
+  text-decoration: none;
+  color: white;
+  font-size: 1.5em;
+}
+
+.project-title {
+  font-size: 1.1em;
+  font-weight: 900;
+  color: seagreen;
+  background-color: white;
+  border: black solid 1px;
+}
+
+#view-more {
+  color: white;
+  text-decoration: none;
+  border: solid green 2px;
+  border-radius: 50px;
+  background: green;
+  padding: 10px 50px;
+}
+
+#view-more:hover {
+  background: seagreen;
+}
+
+#contacts {
+  background-color: #8ab2b5;
+  padding: 50px 0;
+}
+
+.contact {
+  margin-top: 30px;
+  font-size: 1.1em;
+}
+
+#profile-link {
   text-decoration: none;
   color: black;
-  margin-left: 115px;
+  transition: 0.3s;
 }
 
-/*-----larger screens------*/
+#profile-link:hover {
+  border-bottom: red solid;
+  color: red;
+}
 
-@media only screen and (min-width: 992px) {
-  .container {
-    grid-template-areas:
-      "navbar content"
-      "navbar footer";
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: 1fr auto
-  }
+/*Larger Screens*/
 
-  nav ul {
+@media only screen and (min-width: 900px) {
+  #navbar ul{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-end;
   }
 
-  .navbar {
-    background: linear-gradient(#C2EBEC, #4CEFEA, #21B8DC);
-    padding-top: 3em;
+  .nav-links {
+    margin-right: 100px;
+  }
+
+  .project-tile {
+     width: 25vw;
+     height: 250px;
+     display: inline-block;
+    margin: 50px 90px;
+  }
+
+  .project-tile a {
+    display: block;
+    margin-top: 125px;
+  }
+
+  .project-title {
+    margin-top: 98px;
+  }
+
+  #view-more {
+    display: block;
+    width: 100px;
+    margin: 50px auto;
+  }
+
+  #contacts {
+    height: 150px;
+  }
+
+  #contacts h2 {
+    margin: 50px 0;
+  }
+
+  .contact {
+    display: inline;
+    margin: 0 50px;
   }
 }
