--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -564,6 +564,10 @@ button:hover {
     width: 100%;
   }
 
+  #contact > p {
+    width: 100%;
+  }
+
   h1 {
     font-size: 2.7rem;
     width: 80vw;
